--- a/ebook/ebookstore/templates/ebookstore/MyInoformation.html
+++ b/ebook/ebookstore/templates/ebookstore/MyInoformation.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<!--
+<head>
+	<!--
         	作者：offline
         	时间：2018-09-07
         	描述：我的信息页面
         -->
-		<meta charset="UTF-8">
-		<title>我的信息</title>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/static/ebookstore/js/bootstrap.min.js"></script>
-		<link href="/static/ebookstore/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstore/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstore/css/styles.css" rel="stylesheet" media="screen">
-		<script src="/static/ebookstore/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-		<style>
-			body {
+	<meta charset="UTF-8">
+	<title>我的信息</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/static/ebookstore/js/bootstrap.min.js"></script>
+	<link href="/static/ebookstore/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="/static/ebookstore/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+	<link href="/static/ebookstore/css/styles.css" rel="stylesheet" media="screen">
+	<script src="/static/ebookstore/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+	<style>
+		body {
 				background-image: url('/static/ebookstore/img/背景.jpg');
 				background-size: cover;
 			}
@@ -30,194 +30,204 @@
 				margin: 15px;
 			}
 		</style>
-	</head>
+</head>
 
-	<body>
-		<nav id="navbar-example" class="navbar navbar-inverse navbar navbar-fixed-top navbar-has-shadow" role="navigation">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target=".bs-js-navbar-scrollspy">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-					<a class="navbar-brand" href="#">eBookStore</a>
-				</div>
-				<div class="collapse navbar-collapse bs-js-navbar-scrollspy">
-					<ul class="nav navbar-nav">
-						<li class="active">
-							<a href="/ebookstore/index">主页</a>
-						</li>
-						<li class="dropdown">
-							<a href="#" data-toggle="dropdown" class="dropdown-toggle">书籍分类<b class="caret"></b>
+<body>
+	<nav id="navbar-example" class="navbar navbar-inverse navbar navbar-fixed-top navbar-has-shadow" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target=".bs-js-navbar-scrollspy">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">eBookStore</a>
+			</div>
+			<div class="collapse navbar-collapse bs-js-navbar-scrollspy">
+				<ul class="nav navbar-nav">
+					<li class="active">
+						<a href="/ebookstore/index">主页</a>
+					</li>
+					<li class="dropdown">
+						<a href="#" data-toggle="dropdown" class="dropdown-toggle">书籍分类<b class="caret"></b>
 
-							</a>
-							<ul class="dropdown-menu" id="menu1">
+						</a>
+						<ul class="dropdown-menu" id="menu1">
 
-                                <li id="selectComputer">
-									<a href="#">计算机类</a>
-								</li>
-								<li id="selectEnglish">
-									<a href="#">英语类</a>
-								</li>
+							<li id="selectComputer">
+								<a href="#">计算机类</a>
+							</li>
+							<li id="selectEnglish">
+								<a href="#">英语类</a>
+							</li>
 
-							</ul>
-						</li>
-						<li>
-							<a id="newBook" href="javascript:void(0);">新书上架</a>
+						</ul>
+					</li>
+					<li>
+						<a id="newBook" href="javascript:void(0);">新书上架</a>
 
-						</li>
-					</ul>
-					<!--
+					</li>
+				</ul>
+				<!--
                     	作者：offline
                     	时间：2018-09-05
                     	描述：用户已登录
                     -->
-                    {% if name %}
+				{% if name %}
 
-					<ul class="nav pull-right" id="vip">
-						<li class="dropdown">
-							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> {{name}} <i class="caret"></i>
-							</a>
-							<ul class="dropdown-menu">
-								<li>
-									<a tabindex="-1" href="/ebookstore/myinfo">我的信息</a>
-								</li>
-								<li>
-									<a tabindex="-1" href="#">我的订单</a>
-								</li>
-								<li>
-									<a tabindex="-1" href="#">购物车</a>
-								</li>
-								<li class="divider"></li>
-								<li>
-									<a tabindex="-1" href="/ebookstore/logout">退出登录</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-                    {% else %}
-                    <!--
+				<ul class="nav pull-right" id="vip">
+					<li class="dropdown">
+						<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
+							<i class="icon-user"></i> {{name}} <i class="caret"></i>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a tabindex="-1" href="/ebookstore/myinfo">我的信息</a>
+							</li>
+							<li>
+								<a tabindex="-1" href="#">我的订单</a>
+							</li>
+							<li>
+								<a tabindex="-1" href="#">购物车</a>
+							</li>
+							<li class="divider"></li>
+							<li>
+								<a tabindex="-1" href="/ebookstore/logout">退出登录</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+				{% else %}
+				<!--
                         时间：2018-09-05
                     	描述：用户未登陆时代码
                     -->
-                    <ul class="nav pull-right" id="tourist">
-						<li class="dropdown">
-							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> 游客 <i class="caret"></i>
-							</a>
-							<ul class="dropdown-menu">
-							    <li>
-									<a tabindex="-1" href="/ebookstore/login">登录</a>
-								</li>
-								<li>
-									<a tabindex="-1" href="/ebookstore/register">注册</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-                    {% endif %}
-				</div>
+				<ul class="nav pull-right" id="tourist">
+					<li class="dropdown">
+						<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
+							<i class="icon-user"></i> 游客 <i class="caret"></i>
+						</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a tabindex="-1" href="/ebookstore/login">登录</a>
+							</li>
+							<li>
+								<a tabindex="-1" href="/ebookstore/register">注册</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+				{% endif %}
 			</div>
-		</nav>
-		<div class="row-fluid" style="width: 70%; margin:0 auto ;">
-			<!-- block -->
-			<div class="block">
-				<div class="navbar navbar-inner block-header">
-					<div class="muted pull-left">我的信息</div>
-				</div>
-				<div class="block-content collapse in">
-					<div class="span12">
-						<form class="form-horizontal">
-							<div class="control-group">
-								<label class="control-label">用户名</label>
-								<div class="controls">
-									<span class="input-xlarge uneditable-input">{{ name }}</span>
-								</div>
-							</div>
-							<div class="control-group">
-								<label class="control-label">电话</label>
-								<div class="controls">
-									<span class="input-xlarge uneditable-input">此处为电话</span>
-								</div>
-							</div>
-							<div class="control-group">
-								<label class="control-label" for="typeahead">地址 </label>
-								<div class="controls">
-									<input type="text" class="span6" id="" data-provide="typeahead" data-items="4">
-								</div>
-							</div>
-
-							<div class="control-group">
-								<label class="control-label" for="typeahead">密码 </label>
-								<div class="controls" id="psw_invisible1">
-									<input type="password"class="span6" id="input_invisible1" />
-									<img id="visible" onclick="showPsw()" src="/static/ebookstore/img/关闭.jpg">
-								</div>
-								<!--明文密码输入框-->
-								<div class="controls" id="psw_visible1" style="display: none;">
-									<img id="invisible" onclick="hidePsw()" src="/static/ebookstore/img/打开.jpg">
-									<input type="text" class="span6" id="input_visible1"  />
-								</div>
-							</div>
-							<div class="control-group">
-								<label class="control-label" for="typeahead">确认密码 </label>
-								<div class="controls" id="psw_invisible2">
-									<input type="password"class="span6" id="input_invisible2" />
-								</div>
-								<!--明文密码输入框-->
-								<div class="controls" id="psw_visible2" style="display: none;">
-									<input type="text" class="span6" id="input_visible2"  />
-								</div>
-							</div>
-
-							<div class="form-actions">
-								<button type="submit" class="btn btn-primary">保存</button>
-								<a type="reset" class="btn" href="index.html">取消</a>
-							</div>
-						</form>
-
-					</div>
-				</div>
-			</div>
-			<!-- /block -->
 		</div>
-		<script type="text/javascript">
-	// 这里使用最原始的js语法实现，可对应换成jquery语法进行逻辑控制
-	var visible1=document.getElementById('psw_visible1');//text block
-	var invisible1=document.getElementById('psw_invisible1');//password block
-	var inputVisible1 = document.getElementById('input_visible1');
-	var inputInVisible1 = document.getElementById('input_invisible1');
-	var visible2=document.getElementById('psw_visible2');//text block
-	var invisible2=document.getElementById('psw_invisible2');//password block
-	var inputVisible2 = document.getElementById('input_visible2');
-	var inputInVisible2 = document.getElementById('input_invisible2');
-    //隐藏text block，显示password block
-	function showPsw(){
-	 	var val1 = inputInVisible1.value;//将password的值传给text
-	 	inputVisible1.value = val1;
-	 	invisible1.style.display = "none";  
-	 	visible1.style.display = ""; 
-	 	var val2 = inputInVisible2.value;//将password的值传给text
-	 	inputVisible2.value = val2;
-	 	invisible2.style.display = "none";  
-	 	visible2.style.display = ""; 
-	}
-    //隐藏password，显示text  
-    function hidePsw(){
-   		var val1=inputVisible1.value;//将text的值传给password  
-		inputInVisible1.value = val1; 
-		invisible1.style.display = "";  
-	    visible1.style.display = "none";  
-	    
-	    var val2=inputVisible2.value;//将text的值传给password  
-		inputInVisible2.value = val2; 
-		invisible2.style.display = "";  
-	    visible2.style.display = "none";  
-	}
-</script>
-	</body>
+	</nav>
+	<div class="row-fluid" style="width: 70%; margin:0 auto ;">
+		<!-- block -->
+		<div class="block">
+			<div class="navbar navbar-inner block-header">
+				<div class="muted pull-left">我的信息</div>
+			</div>
+			<div class="block-content collapse in">
+				<div class="span12">
+					<form class="form-horizontal">
+						<div class="control-group">
+							<label class="control-label">用户名</label>
+							<div class="controls">
+								<span id="user_name"  class="input-xlarge uneditable-input">{{ name }}</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label">电话</label>
+							<div class="controls">
+								<span id="user_phone" class="input-xlarge uneditable-input">{{ phone }}</span>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="typeahead">地址 </label>
+							<div class="controls">
+								<input type="text" class="span6" id="user_address" data-provide="typeahead" data-items="4" value={{ address }}>
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label class="control-label" for="typeahead">密码 </label>
+							<div class="controls" id="psw_invisible1">
+								<input type="password" class="span6" id="user_password" value="{{ password }}" />
+								<img id="visible" onclick="showPsw()" src="/static/ebookstore/img/关闭.jpg">
+								<img id="invisible" onclick="hidePsw()" src="/static/ebookstore/img/打开.jpg">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="typeahead">确认密码 </label>
+							<div class="controls" id="psw_invisible2">
+								<input type="password" class="span6" id="user_password_sure" value="{{ password }}" />
+							</div>
+						</div>
+
+						<div class="form-actions">
+							<button class="btn btn-primary" onclick="modify()">保存</button>
+							<a type="reset" class="btn" href="index.html">取消</a>
+						</div>
+					</form>
+
+				</div>
+			</div>
+		</div>
+		<!-- /block -->
+	</div>
+	<script type="text/javascript">
+		//隐藏text block，显示password block
+		function showPsw() {
+			document.getElementById("user_password").type = "text";
+			document.getElementById("user_password_sure").type = "text";
+			document.getElementById("visible").style.display = "none";
+			document.getElementById("invisible").style.display = "";
+		}
+		//隐藏password，显示text  
+		function hidePsw() {
+			document.getElementById("user_password").type = "password";
+			document.getElementById("user_password_sure").type = "password";
+			document.getElementById("visible").style.display = "";
+			document.getElementById("invisible").style.display = "none";
+		}
+
+		function modify() {
+			var name = document.getElementById("user_name").value
+				address = document.getElementById("user_address").value
+				password = document.getElementById("user_password").value
+			$.ajax({
+				url: "/ebookstore/myinfo/",
+				method: "post",
+				data: {
+					"name": name,
+					"address" :address,
+					"password": password
+				},
+				error: function () {
+				},
+				success: function (data) {
+					switch (Number(data)) {
+						case 1:
+							alert('保存成功');
+							/*
+							if(rememberElement.value == true) {
+								document.cookie =
+									`name=${encodeURIComponent(name)};expires=${new Date(Date.now()+30*86400*1000)}`;
+								document.cookie =
+									`password=${encodeURIComponent(password)};expires=${new Date(Date.now()+30*86400*1000)}`;
+							}
+							*/
+							//location.href = "/ebookstore/myinfo";
+							break;
+						case -1:
+							alert("你的帐户已被冻结！");
+							break;
+					}
+				}
+			});
+		}
+	</script>
+</body>
 
 </html>
